# snowball

./: .gitignore  API_USAGE.md  CHEATSHEET.md  CLAUDE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
src/snowball/: __init__.py  cli.py  models.py  paper_utils.py  snowballing.py  visualization.py
src/snowball/apis/: aggregator.py  google_scholar.py  semantic_scholar.py
src/snowball/exporters/: csv_exporter.py  tikz.py
src/snowball/parsers/: pdf_parser.py
src/snowball/storage/: json_storage.py
src/snowball/tui/: app.py
tests/: __init__.py  conftest.py  test_cli.py  test_models.py  test_paper_utils.py  test_public_api.py  test_snowballing.py
tests/apis/: test_aggregator.py  test_arxiv.py  test_base.py  test_crossref.py  test_google_scholar.py  test_openalex.py  test_semantic_scholar.py
tests/exporters/: __init__.py  test_bibtex.py  test_csv_exporter.py  test_tikz.py
tests/filters/: __init__.py  test_filter_engine.py
tests/parsers/: test_pdf_parser.py
tests/storage/: test_json_storage.py
