[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "snowball-slr"
version = "0.1.0"
description = "A systematic literature review tool using snowballing methodology"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "Snowball Contributors"}
]
dependencies = [
    "textual>=0.47.0",
    "requests>=2.31.0",
    "pypdfium2>=4.26.0",
    "bibtexparser>=1.4.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "rich>=13.0.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
grobid = [
    "grobid-client-python>=0.1.0",
]
google-scholar = [
    "scholarly>=1.7.0",
]

[project.scripts]
snowball = "snowball.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
